# A.Replicate

./: README.md  app1.py  constant.py  report2.json  utils.py
rep/: README.md  pyproject.toml
rep/src/rep/: crew.py  main.py
rep/src/rep/config/: agents.yaml  tasks.yaml
