[project]
name = "rep"
version = "0.1.0"
description = "rep using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
rep = "rep.main:run"
run_crew = "rep.main:run"
train = "rep.main:train"
replay = "rep.main:replay"
test = "rep.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
